fixed splash spacing

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -3,7 +3,7 @@
     position: absolute;
     bottom: 0;
     margin: auto;
-    height: 52px;
+    height: 6%;
     width: 100%;
     background-color: black;
     color: grey;
