--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,3 +1,9 @@
 .index-pic{
-    background-image: image-url("pokedex.jpg");
+    background-image: image-url("eevee.png");
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.dex{
 }
