--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,5 +1,20 @@
+.test{
+    height: 100%;
+    width: 100%;
+}
+
+.splash-image-container{
+    background-image: linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5)), image-url("eevee.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    height: 94%;
+    width: 100%;
+    top: 0px;
+    z-index: -1;
+}
+
 .splash-container{
-    background-color: darkred;
     display: flex;
     width: 100%;
     height: 100%;
